# src/modules/user/user.route.ts
@@ -1,10 +1,10 @@
 import express from 'express';
-import {auth} from '../../middlewares/auth';
-import {addCreatedByIdToBody, addDeletedByToBody, addUpdatedByIdToBody} from '../../middlewares/addUserToBody';
-import {validate} from '../../middlewares/validate';
-import {userController} from './user.controller';
-import {userValidation} from './user.validation';
-import {AdminPermission, Permission, SellerPermission} from '../../middlewares/checkPermission';
+import { auth } from '../../middlewares/auth';
+import { addCreatedByIdToBody, addDeletedByToBody, addUpdatedByIdToBody } from '../../middlewares/addUserToBody';
+import { validate } from '../../middlewares/validate';
+import { userController } from './user.controller';
+import { userValidation } from './user.validation';
+import { AdminPermission, Permission, SellerPermission } from '../../middlewares/checkPermission';
 
 const router = express.Router();
 
@@ -19,268 +19,8 @@ router
   .route('/:userId')
   .get(auth(), validate(userValidation.getOne), userController.getOne)
   .patch(auth(), addUpdatedByIdToBody, validate(userValidation.updateOne), userController.updateOne);
-  // .delete(auth(), Permission(), addDeletedByToBody, validate(userValidation.deleteOne), userController.deleteOne);
+// .delete(auth(), Permission(), addDeletedByToBody, validate(userValidation.deleteOne), userController.deleteOne);
 
 export const userRoute = router;
 
-/**
- * @swagger
- * tags:
- *   name: User
- *   description: User management and retrieval
- */
 
-/**
- * @swagger
- * /user:
- *   post:
- *     summary: Create a User
- *     description: User create a user.
- *     tags: [User]
- *     security:
- *       - bearerAuth: []
- *     requestBody:
- *       required: true
- *       content:
- *         application/json:
- *           schema:
- *             type: object
- *             required:
- *               - fullName
- *               - classId
- *             properties:
- *               CODE:
- *                 type: string
- *               email:
- *                 type: string
- *               phone:
- *                 type: string
- *               fullName:
- *                 type: string
- *               avatar:
- *                 type: string
- *               birthday:
- *                 type: string
- *               country:
- *                 type: string
- *               address:
- *                 type: string
- *               organizationId:
- *                 type: string
- *             example:
- *               email: fake@example.com
- *               phone: 0358849971
- *               fullName: fake name
- *               avatar: image.png
- *               birthday: 08/02/2023
- *               country: Ha Noi
- *               address: Ha Noi
- *               organizationId: 655b2218fb4d3fadb64ed673
- *     responses:
- *       "200":
- *         description: Created
- *         content:
- *           application/json:
- *             schema:
- *                $ref: '#/components/schemas/User'
- *       "400":
- *         $ref: '#/components/responses/DuplicateEmail'
- *       "401":
- *         $ref: '#/components/responses/Unauthorized'
- *       "403":
- *         $ref: '#/components/responses/Forbidden'
- *   get:
- *     summary: Get list Users
- *     description: Only admins can retrieve all users.
- *     tags: [User]
- *     security:
- *       - bearerAuth: []
- *     parameters:
- *       - in: query
- *         name: sort
- *         schema:
- *           type: string
- *         description: sort by query in the form of field:desc/asc (ex. name:asc)
- *       - in: query
- *         name: limit
- *         schema:
- *           type: integer
- *           minimum: 1
- *         default: 10
- *         description: Maximum number of users
- *       - in: query
- *         name: page
- *         schema:
- *           type: integer
- *           minimum: 1
- *           default: 1
- *         description: Page number
- *     responses:
- *       "200":
- *         description: OK
- *         content:
- *           application/json:
- *             schema:
- *               type: object
- *               properties:
- *                 results:
- *                   type: array
- *                   items:
- *                     $ref: '#/components/schemas/User'
- *                 page:
- *                   type: integer
- *                   example: 1
- *                 limit:
- *                   type: integer
- *                   example: 10
- *                 totalPages:
- *                   type: integer
- *                   example: 1
- *                 totalResults:
- *                   type: integer
- *                   example: 1
- *       "401":
- *         $ref: '#/components/responses/Unauthorized'
- *       "403":
- *         $ref: '#/components/responses/Forbidden'
- */
-
-/**
- * @swagger
- * /user/all:
- *   get:
- *     summary: Get all Users
- *     description: Only admins can retrieve all users.
- *     tags: [User]
- *     security:
- *       - bearerAuth: []
- *     parameters:
- *     responses:
- *       "200":
- *         description: OK
- *         content:
- *           application/json:
- *             schema:
- *               type: array
- *               $ref: '#/components/schemas/User'
- *       "401":
- *         $ref: '#/components/responses/Unauthorized'
- *       "403":
- *         $ref: '#/components/responses/Forbidden'
- */
-
-/**
- * @swagger
- * /user/{userId}:
- *   get:
- *     summary: get user
- *     description:
- *     tags: [User]
- *     security:
- *       - bearerAuth: []
- *     parameters:
- *       - in: path
- *         name: userId
- *         required: true
- *         schema:
- *           type: string
- *         description: get user
- *     responses:
- *       "200":
- *         description: OK
- *         content:
- *           application/json:
- *             schema:
- *               $ref: '#/components/schemas/User'
- *       "400":
- *         $ref: '#/components/responses/DuplicateEmail'
- *       "401":
- *         $ref: '#/components/responses/Unauthorized'
- *       "403":
- *         $ref: '#/components/responses/Forbidden'
- *       "404":
- *         $ref: '#/components/responses/NotFound'
- *   patch:
- *     summary: Update a user
- *     description: update user
- *     tags: [User]
- *     security:
- *       - bearerAuth: []
- *     parameters:
- *       - in: path
- *         name: userId
- *         required: true
- *         schema:
- *           type: string
- *         description: userId id
- *     requestBody:
- *       required: true
- *       content:
- *         application/json:
- *           schema:
- *             type: object
- *             properties:
- *               email:
- *                 type: string
- *               phone:
- *                 type: string
- *               fullName:
- *                 type: string
- *               avatar:
- *                 type: string
- *               birthday:
- *                 type: string
- *               country:
- *                 type: string
- *               address:
- *                 type: string
- *               organizationId:
- *                 type: string
- *             example:
- *               email: fake@example.com
- *               phone: 0358849971
- *               fullName: fake name
- *               userName: fake userName
- *               avatar: image.png
- *               birthday: 08/02/2023
- *               country: Ha Noi
- *               address: Ha Noi
- *               organizationId: 655b2218fb4d3fadb64ed673
- *     responses:
- *       "200":
- *         description: OK
- *         content:
- *           application/json:
- *             schema:
- *                $ref: '#/components/schemas/User'
- *       "400":
- *         $ref: '#/components/responses/DuplicateEmail'
- *       "401":
- *         $ref: '#/components/responses/Unauthorized'
- *       "403":
- *         $ref: '#/components/responses/Forbidden'
- *       "404":
- *         $ref: '#/components/responses/NotFound'
- *   delete:
- *     summary: Delete a user
- *     description: delete user.
- *     tags: [User]
- *     security:
- *       - bearerAuth: []
- *     parameters:
- *       - in: path
- *         name: userId
- *         required: true
- *         schema:
- *           type: string
- *         description: user id
- *     responses:
- *       "200":
- *         description: successfully
- *       "401":
- *         $ref: '#/components/responses/Unauthorized'
- *       "403":
- *         $ref: '#/components/responses/Forbidden'
- *       "404":
- *         $ref: '#/components/responses/NotFound'
- */
